# gorillabot

./: .env.sample  .gitignore  Cargo.toml  license.md  readme.md
src/: db.rs  init.sql  main.rs  types.rs
